--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ main {
         <button class="dropbtn">Select book <i class="fa fa-caret-down"></i></button>
         <div class="dropdown-content">
           <a href="https://elibdado.github.io/english-DADO/">English</a>
-          <a href="E:\laht ng html\dado homepage\math.html">Math</a>
+          <a href="https://elibdado.github.io/MATH-DADO/">Math</a>
           <a href="https://elibdado.github.io/SCIENCE-DADO/">Science</a>
         </div>
       </div>
