--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ main {
         <div class="dropdown-content">
           <a href="https://elibdado.github.io/english-DADO/">English</a>
           <a href="https://elibdado.github.io/MATH-DADO/">Math</a>
-          <a href="https://elibdado.github.io/SCIENCE-DADO/">Science</a>
+          <a href="https://elibdado.github.io/science/">Science</a>
         </div>
       </div>
     </nav>
