--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
   <link rel="icon" href="https://scontent.fmnl9-2.fna.fbcdn.net/v/t31.18172-8/1040393_501426546597592_1579230413_o.jpg?_nc_cat=103&ccb=1-7&_nc_sid=c2f564&_nc_eui2=AeE-jSAKFlHtrCJmW9xsPqdF6X4dV8t_UZvpfh1Xy39Rm5Z-sPahLmlGirYSlOdYynun1aWc0vAltZnhSDBfYsow&_nc_ohc=8dqKAOidyV4AX9TSSY6&_nc_ht=scontent.fmnl9-2.fna&oh=00_AfB5-FT-_3IjP7E5D8Yu4U2iKRMIdZ_j4AAbIA7q9E5XGA&oe=65517019" type="image/x-icon">
 
 <style>
-
-.dropdown {
-  float: left;
-  overflow: hidden;
-}
-
 .dropdown .dropbtn {
   font-size: 18px;  
   border: none;
@@ -26,7 +20,6 @@
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-  font-size: 15px;
   
 }
 
@@ -70,16 +63,15 @@
   overflow: hidden;
 }
 
-.dropdown .dropbtn {  
+.dropdown .dropbtn {
+  font-size: 15px;
   border: none;
   outline: none;
   color: rgb(0, 0, 0);
-  padding: 3px;
+  padding: 0.09px 3px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
-  font-size: 17px;
-  
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn {
@@ -117,11 +109,11 @@
 }
 
 .dropdown-aboutus .dropbtn {
-  font-size: 17px;
+  font-size: 15px;
   border: none;
   outline: none;
   color: rgb(0, 0, 0);
-  padding: 3px;
+  padding: 0.09px 3px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -149,10 +141,12 @@ header {
   text-indent: 23px;  
 }
 
+
 nav {
   background-color: #765827;
   padding: 1px;
-  text-indent: 10px;   
+  text-indent: 10px;
+  position: relative;   
 }
 
 nav a {
@@ -378,13 +372,12 @@ main {
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media screen and (max-width: 600px) {
   /* Adjustments for small devices (e.g., portrait tablets and large phones) */
   .search-container {
     width: 50%;
     margin-left: 0;
   }
-
   .search-btn {
     padding: 5px;
     margin-top: 5px;
@@ -395,10 +388,14 @@ main {
     margin-left: 40px;
   }
   .dropdown .dropbtn {
-    padding: 0.2 ;
+    padding: 5px;
+    float: right;
   }
-
- }
+  .nav {
+    margin-right: 0; /* Reset margin-right */
+    float: right; /* Move navigation bar to the right */
+  }
+}
 
 @media only screen and (max-width: 1200px) {
   /* Adjustments for large laptops and desktops */
@@ -436,21 +433,21 @@ main {
     </header>
   
     <nav>
-      <a href="https://elibdado.github.io/main-DADO/">Home</a>
+      <a href="E:\laht ng html\dado homepage\dado homepage.html">Home</a>
       <div class="dropdown-aboutus">
         <button class="dropbtn">About Us <i class="fa fa-caret-down"></i></button>
         <div class="dropdown-aboutus-content">
-          <a href="https://elibdado.github.io/Mission-DADO/">School Mission</a>
-          <a href="https://elibdado.github.io/vision-DADO/">School Vision</a>
+          <a href="E:\dado vision\mission.html">School Mission</a>
+          <a href="E:\dado vision\vision.html">School Vision</a>
         </div>
       </div>
       <a href="#">Contact</a>
       <div class="dropdown">
         <button class="dropbtn">Select book <i class="fa fa-caret-down"></i></button>
         <div class="dropdown-content">
-          <a href="https://elibdado.github.io/english-DADO/">English</a>
-          <a href="https://elibdado.github.io/MATH-DADO/">Math</a>
-          <a href="https://elibdado.github.io/science/">Science</a>
+          <a href="E:\laht ng html\dado homepage\english.html">English</a>
+          <a href="E:\laht ng html\dado homepage\math.html">Math</a>
+          <a href="https://elibdado.github.io/SCIENCE-DADO/">Science</a>
         </div>
       </div>
     </nav>
